# pomodorino-rs

./: .gitignore  developer.md  index.html  package.json  readme.md
.github/workflows/: main.yml  publish.yml  test-on-pr.yml
src/: index.html
src-tauri/: Cargo.toml  index.html  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: icongen.rs  index.html  main.rs  pomodoro.rs  sound.rs
