[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.7", features = ["api-all", "system-tray"] }
crossbeam = "0.8.1"
image = { version = "0.23.14", default-features = false, features = ["ico"] }
imageproc = "0.22.0"
rusttype = "0.9.2"
timer = "0.2.0"
chrono = "0.4.19"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
