[package]
name = "pomodorino-rs"
version = "0.3.0"
description = "Pomodorino-rs"
authors = ["Rafael Merlin"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rafamerlin/pomodorino-rs"
default-run = "pomodorino-rs"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.3", features = ["api-all", "system-tray"] }
crossbeam = "0.8.1"

# Don't update to 0.24 because it breaks the build
image = { version = "0.23.14", default-features = false, features = ["ico"] }
imageproc = "0.22.0"
rusttype = "0.9.2"
timer = "0.2.0"
chrono = "0.4.19"
rodio = "0.15.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
