[package]
name = "pomodorino-rs"
version = "0.3.2"
description = "Pomodorino-rs"
authors = ["Rafael Merlin"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rafamerlin/pomodorino-rs"
default-run = "pomodorino-rs"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["icon-ico", "system-tray"] }
crossbeam = "0.8.2"

image = { version = "0.24.5", default-features = false, features = ["ico"] }
# ImageProc 0.22.0 is not compatible with image 0.24 so I'm using their latest git version instead
# imageproc = { git = "https://github.com/image-rs/imageproc",rev = "b7942657b1a370fc485507693ed4df1f8a116cb7" }
imageproc = "0.23.0"
rusttype = "0.9.3"
timer = "0.2.0"
chrono = "0.4.23"
rodio = {version = "0.17.1", features = ["symphonia-mp3"], default-features = false  }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
